istio/lab3-helloworld/animal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: animals-vs
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /animals
    route:
    - destination:
        host: animals
        port:
          number: 8080
